--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@
   </head>
   <body class="h-screen">
     <main class="h-full">
-      <section class="flex flex-col bg-black">
-        <header class="flex p-2 justify-between sticky top-0 ">
+      <section class="flex flex-col bg-black relative">
+        <header class="flex p-2 justify-between sticky top-0 bg-black z-40">
           <div class="p-4">
             <img class="w-[80px]" src="src/imag/logo.png" />
           </div>
-          <ul class="flex gap-5 items-center p-10">
+          <ul class="flex gap-5 items-center pt-10 pr-10 pb-1">
             <li class="menuItem">Residencies</li>
             <li class="menuItem">Our Value</li>
             <li class="menuItem">Contact Us</li>
@@ -41,7 +41,9 @@
               Find a variety of properties that suit you very<br />
               easilty Forget all difficulties in finding a residence for you
             </p>
-            <div class="flex items-center w-[600px] gap-2 bg-white p-3 border-2 border-gray-500 rounded-[4px]">
+            <div
+              class="flex items-center w-[600px] gap-2 bg-white p-3 border-2 border-gray-500 rounded-[4px]"
+            >
               <svg
                 width="24"
                 height="24"
@@ -62,7 +64,7 @@
                   fill="#4066ff"
                 ></path>
               </svg>
-              <input class="outline-none w-full" type="text">
+              <input class="outline-none w-full" type="text" />
               <button
                 class="px-3 py-2 bg-[#2949C6] text-white rounded-[5px] text-[14px] hover:scale-105"
               >
@@ -71,39 +73,272 @@
             </div>
             <div class="flex gap-6">
               <div class="flex flex-col">
-               <div class="flex gap-8 items-center">
-                <p class="text-white text-[36px]">9000</p>
-                <svg class="mb-3" width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M10 18C10 19.1046 10.8954 20 12 20C13.1046 20 14 19.1046 14 18V14H18C19.1046 14 20 13.1046 20 12C20 10.8954 19.1046 10 18 10H14V6C14 4.89543 13.1046 4 12 4C10.8954 4 10 4.89543 10 6V10L6 10C4.89543 10 4 10.8954 4 12C4 13.1046 4.89543 14 6 14L10 14V18Z" fill="#ff922d"></path></svg>
-               </div>
-               <div>
-                <p class="text-gray-500 text-[14px]">Premium Product</p>
-               </div>
+                <div class="flex gap-8 items-center">
+                  <p class="text-white text-[36px]">9000</p>
+                  <svg
+                    class="mb-3"
+                    width="24"
+                    height="24"
+                    viewBox="0 0 24 24"
+                    fill="none"
+                    xmlns="http://www.w3.org/2000/svg"
+                  >
+                    <path
+                      d="M10 18C10 19.1046 10.8954 20 12 20C13.1046 20 14 19.1046 14 18V14H18C19.1046 14 20 13.1046 20 12C20 10.8954 19.1046 10 18 10H14V6C14 4.89543 13.1046 4 12 4C10.8954 4 10 4.89543 10 6V10L6 10C4.89543 10 4 10.8954 4 12C4 13.1046 4.89543 14 6 14L10 14V18Z"
+                      fill="#ff922d"
+                    ></path>
+                  </svg>
+                </div>
+                <div>
+                  <p class="text-gray-500 text-[14px]">Premium Product</p>
+                </div>
               </div>
               <div class="flex flex-col">
-               <div class="flex gap-8 items-center">
-                <p class="text-white text-[36px]">2000</p>
-                <svg class="mb-3" width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M10 18C10 19.1046 10.8954 20 12 20C13.1046 20 14 19.1046 14 18V14H18C19.1046 14 20 13.1046 20 12C20 10.8954 19.1046 10 18 10H14V6C14 4.89543 13.1046 4 12 4C10.8954 4 10 4.89543 10 6V10L6 10C4.89543 10 4 10.8954 4 12C4 13.1046 4.89543 14 6 14L10 14V18Z" fill="#ff922d"></path></svg>
-               </div>
-               <div>
-                <p class="text-gray-500 text-[14px]">Happy Customer</p>
-               </div>
+                <div class="flex gap-8 items-center">
+                  <p class="text-white text-[36px]">2000</p>
+                  <svg
+                    class="mb-3"
+                    width="24"
+                    height="24"
+                    viewBox="0 0 24 24"
+                    fill="none"
+                    xmlns="http://www.w3.org/2000/svg"
+                  >
+                    <path
+                      d="M10 18C10 19.1046 10.8954 20 12 20C13.1046 20 14 19.1046 14 18V14H18C19.1046 14 20 13.1046 20 12C20 10.8954 19.1046 10 18 10H14V6C14 4.89543 13.1046 4 12 4C10.8954 4 10 4.89543 10 6V10L6 10C4.89543 10 4 10.8954 4 12C4 13.1046 4.89543 14 6 14L10 14V18Z"
+                      fill="#ff922d"
+                    ></path>
+                  </svg>
+                </div>
+                <div>
+                  <p class="text-gray-500 text-[14px]">Happy Customer</p>
+                </div>
               </div>
               <div class="flex flex-col">
-               <div class="flex gap-10 items-center">
-                <p class="text-white text-[36px]">28</p>
-                <svg class="mb-3" width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M10 18C10 19.1046 10.8954 20 12 20C13.1046 20 14 19.1046 14 18V14H18C19.1046 14 20 13.1046 20 12C20 10.8954 19.1046 10 18 10H14V6C14 4.89543 13.1046 4 12 4C10.8954 4 10 4.89543 10 6V10L6 10C4.89543 10 4 10.8954 4 12C4 13.1046 4.89543 14 6 14L10 14V18Z" fill="#ff922d"></path></svg>
-               </div>
-               <div>
-                <p class="text-gray-500 text-[14px]">Awards Winning</p>
-               </div>
+                <div class="flex gap-10 items-center">
+                  <p class="text-white text-[36px]">28</p>
+                  <svg
+                    class="mb-3"
+                    width="24"
+                    height="24"
+                    viewBox="0 0 24 24"
+                    fill="none"
+                    xmlns="http://www.w3.org/2000/svg"
+                  >
+                    <path
+                      d="M10 18C10 19.1046 10.8954 20 12 20C13.1046 20 14 19.1046 14 18V14H18C19.1046 14 20 13.1046 20 12C20 10.8954 19.1046 10 18 10H14V6C14 4.89543 13.1046 4 12 4C10.8954 4 10 4.89543 10 6V10L6 10C4.89543 10 4 10.8954 4 12C4 13.1046 4.89543 14 6 14L10 14V18Z"
+                      fill="#ff922d"
+                    ></path>
+                  </svg>
+                </div>
+                <div>
+                  <p class="text-gray-500 text-[14px]">Awards Winning</p>
+                </div>
               </div>
             </div>
           </section>
           <section>
-            <img class="rounded-t-full border-8 border-gray-700" src="src/imag/hero-image.png" >
+            <img
+              class="rounded-t-full border-8 border-gray-700"
+              src="src/imag/hero-image.png"
+            />
           </section>
         </div>
+        <div
+          class="absolute left-0 w-76 h-76 bg-white rounded-[50%] blur-[110px] z-50"
+        ></div>
       </section>
+      <section class="flex gap-10 p-20 justify-between items-center">
+        <img class="h-26 w-1/6" src="src/imag/prologis.png" />
+        <img class="h-25 w-1/5" src="src/imag/realty.png" />
+        <img class="h-25 w-1/5" src="src/imag/tower.png" />
+        <img class="h-25 w-1/5" src="src/imag/equinix.png" />
+      </section>
+      <section class="flex flex-col m-16 gap-8">
+        <div class="flex justify-between items-center">
+          <div class="flex flex-col">
+            <p class="text-one text-2xl font-bold">Best Choices</p>
+            <p class="text-two text-4xl font-semibold">Popular Residencies</p>
+          </div>
+          <div class="flex gap-3">
+            <button
+              class="text-2xl shadow-md bg-white h-8 w-8 rounded-[4px] hover:bg-gray-100 hover:scale-110"
+            >
+              <
+            </button>
+            <button
+              class="text-2xl shadow-md bg-white h-8 w-8 rounded-[4px] hover:bg-gray-100 hover:scale-110"
+            >
+              >
+            </button>
+          </div>
+        </div>
+        <div class="flex gap-3">
+          <div
+            class="flex flex-col w-[300px] gap-4 p-5 hover:scale-105 hover:bg-gray-100"
+          >
+            <img src="src/imag/state1.png" />
+            <span class="text-one text-xl font-bold"
+              >$ <span class="text-gray-500">47,04</span></span
+            >
+            <span class="text-two text-2xl font-bold">Aliva Pirva Jarden</span>
+            <span class="text-gray-500 text-[12px]"
+              >Jacarta garden city state,paulo gadung ,jakarta timur ,Diki
+              jakarta</span
+            >
+          </div>
+        </div>
+      </section>
+      <section class="flex m-12 gap-40">
+        <div>
+          <img
+            class="rounded-t-full border-8 border-gray-300"
+            src="src/imag/value.png"
+          />
+        </div>
+        <div class="flex flex-col gap-8 w-[1500px]">
+          <div class="flex flex-col gap-4">
+            <p class="text-one text-2xl font-bold">Our Value</p>
+            <p class="text-two text-4xl font-bold">Value We Give to You</p>
+            <p class="text-gray-500 text-[16px]">
+              We always ready to help by providijng the best services for you
+              .<br />
+              We beleive a good blace to live can make your life better
+            </p>
+          </div>
+          <div
+            class="showhide flex flex-col p-4 border-1 border-gray-200 gap-5"
+          >
+            <div class="flex justify-between p-2">
+              <svg
+                width="24"
+                height="24"
+                viewBox="0 0 24 24"
+                fill="none"
+                xmlns="http://www.w3.org/2000/svg"
+              >
+                <path
+                  fill-rule="evenodd"
+                  clip-rule="evenodd"
+                  d="M5.33248 4.71069L10.3708 2.36419C11.4134 1.8786 12.6036 1.8786 13.6462 2.36419L18.6646 4.70139C20.1321 5.38485 21.0953 6.92095 20.9925 8.60032C20.5981 15.0419 18.8406 17.9539 14.0899 21.3322C12.8361 22.2238 11.1823 22.2216 9.92759 21.3315C5.1914 17.9715 3.36871 15.1001 3.00617 8.57773C2.91343 6.90939 3.87515 5.38942 5.33248 4.71069ZM15.5644 10.4939C15.8372 10.1822 15.8056 9.70834 15.4938 9.43558C15.1821 9.16282 14.7083 9.1944 14.4355 9.50613L11.5656 12.786C11.4775 12.8867 11.3258 12.9002 11.2213 12.8166L9.46849 11.4144C9.14504 11.1556 8.67307 11.208 8.41431 11.5315C8.15556 11.8549 8.208 12.3269 8.53145 12.5857L10.2843 13.9879C11.0156 14.5729 12.0778 14.4786 12.6945 13.7738L15.5644 10.4939Z"
+                  fill="#4066ff"
+                ></path>
+              </svg>
+              <span class="text-two text-xl font-semibold"
+                >Best interest rates on the market</span
+              >
+              <svg
+                width="24"
+                height="24"
+                viewBox="0 0 24 24"
+                fill="none"
+                xmlns="http://www.w3.org/2000/svg"
+              >
+                <path
+                  fill-rule="evenodd"
+                  clip-rule="evenodd"
+                  d="M2 9.5V18C2 20.2091 3.79086 22 6 22H18C20.2091 22 22 20.2091 22 18V9.5H2ZM2 8H22V6C22 3.79086 20.2091 2 18 2H6C3.79086 2 2 3.79086 2 6V8ZM19 5C19 5.55228 18.5523 6 18 6C17.4477 6 17 5.55228 17 5C17 4.44772 17.4477 4 18 4C18.5523 4 19 4.44772 19 5ZM14 6C14.5523 6 15 5.55228 15 5C15 4.44772 14.5523 4 14 4C13.4477 4 13 4.44772 13 5C13 5.55228 13.4477 6 14 6Z"
+                  fill="#4066ff"
+                ></path>
+              </svg>
+            </div>
+            <div class="text-[16px] text-gray-500 p-3 w-[700]">
+              <p class="contant">
+                Exercitation in fugiat est ut ad ea cupidatat ut in cupidatat
+                occaecat ut occaecat consequat est minim minim esse tempor
+                laborum consequat esse adipisicing eu reprehenderit enim.
+              </p>
+            </div>
+          </div>
+          <div
+            class="showhide flex flex-col p-4 border-1 border-gray-200 gap-5"
+          >
+            <div class="flex justify-between p-2">
+              <svg
+                width="24"
+                height="24"
+                viewBox="0 0 24 24"
+                fill="none"
+                xmlns="http://www.w3.org/2000/svg"
+              >
+                <path
+                  fill-rule="evenodd"
+                  clip-rule="evenodd"
+                  d="M2 6C2 3.79086 3.79086 2 6 2H18C20.2091 2 22 3.79086 22 6V18C22 20.2091 20.2091 22 18 22H6C3.79086 22 2 20.2091 2 18V6ZM8.6413 8.6413C8.93419 8.34841 9.40907 8.34841 9.70196 8.6413L12 10.9393L14.298 8.6413C14.5909 8.34841 15.0658 8.34841 15.3587 8.6413C15.6516 8.93419 15.6516 9.40907 15.3587 9.70196L13.0607 12L15.3588 14.2982C15.6517 14.591 15.6517 15.0659 15.3588 15.3588C15.0659 15.6517 14.591 15.6517 14.2982 15.3588L12 13.0607L9.70184 15.3588C9.40895 15.6517 8.93408 15.6517 8.64118 15.3588C8.34829 15.0659 8.34829 14.591 8.64118 14.2982L10.9393 12L8.6413 9.70196C8.34841 9.40907 8.34841 8.93419 8.6413 8.6413Z"
+                  fill="#4066ff"
+                ></path>
+              </svg>
+              <span class="text-two text-xl font-semibold"
+                >Prevent unstable prices</span
+              >
+              <svg
+                width="24"
+                height="24"
+                viewBox="0 0 24 24"
+                fill="none"
+                xmlns="http://www.w3.org/2000/svg"
+              >
+                <path
+                  fill-rule="evenodd"
+                  clip-rule="evenodd"
+                  d="M2 9.5V18C2 20.2091 3.79086 22 6 22H18C20.2091 22 22 20.2091 22 18V9.5H2ZM2 8H22V6C22 3.79086 20.2091 2 18 2H6C3.79086 2 2 3.79086 2 6V8ZM19 5C19 5.55228 18.5523 6 18 6C17.4477 6 17 5.55228 17 5C17 4.44772 17.4477 4 18 4C18.5523 4 19 4.44772 19 5ZM14 6C14.5523 6 15 5.55228 15 5C15 4.44772 14.5523 4 14 4C13.4477 4 13 4.44772 13 5C13 5.55228 13.4477 6 14 6Z"
+                  fill="#4066ff"
+                ></path>
+              </svg>
+            </div>
+
+            <p class="contant text-[16px] text-gray-500 p-3">
+              Exercitation in fugiat est ut ad ea cupidatat ut in cupidatat
+              occaecat ut occaecat consequat est minim minim esse tempor laborum
+              consequat esse adipisicing eu reprehenderit enim.
+            </p>
+          </div>
+          <div
+            class="showhide flex flex-col p-4 border-1 border-gray-200 gap-5"
+          >
+            <div class="flex justify-between p-2">
+              <svg
+                width="24"
+                height="24"
+                viewBox="0 0 24 24"
+                fill="none"
+                xmlns="http://www.w3.org/2000/svg"
+              >
+                <path
+                  fill-rule="evenodd"
+                  clip-rule="evenodd"
+                  d="M20 3C21.1046 3 22 3.89543 22 5V19C22 20.1046 21.1046 21 20 21C18.8954 21 18 20.1046 18 19V5C18 3.89543 18.8954 3 20 3ZM4 11C5.10457 11 6 11.8954 6 13L6 19C6 20.1046 5.10457 21 4 21C2.89543 21 2 20.1046 2 19V13C2 11.8954 2.89543 11 4 11ZM14 9C14 7.89543 13.1046 7 12 7C10.8954 7 10 7.89543 10 9V19C10 20.1046 10.8954 21 12 21C13.1046 21 14 20.1046 14 19L14 9Z"
+                  fill="#4066ff"
+                ></path>
+              </svg>
+              <span class="text-two text-xl font-semibold"
+                >Best price on the market</span
+              >
+              <svg
+                width="24"
+                height="24"
+                viewBox="0 0 24 24"
+                fill="none"
+                xmlns="http://www.w3.org/2000/svg"
+              >
+                <path
+                  fill-rule="evenodd"
+                  clip-rule="evenodd"
+                  d="M2 9.5V18C2 20.2091 3.79086 22 6 22H18C20.2091 22 22 20.2091 22 18V9.5H2ZM2 8H22V6C22 3.79086 20.2091 2 18 2H6C3.79086 2 2 3.79086 2 6V8ZM19 5C19 5.55228 18.5523 6 18 6C17.4477 6 17 5.55228 17 5C17 4.44772 17.4477 4 18 4C18.5523 4 19 4.44772 19 5ZM14 6C14.5523 6 15 5.55228 15 5C15 4.44772 14.5523 4 14 4C13.4477 4 13 4.44772 13 5C13 5.55228 13.4477 6 14 6Z"
+                  fill="#4066ff"
+                ></path>
+              </svg>
+            </div>
+
+            <p class="contant text-[16px] text-gray-500 p-3">
+              Exercitation in fugiat est ut ad ea cupidatat ut in cupidatat
+              occaecat ut occaecat consequat est minim minim esse tempor laborum
+              consequat esse adipisicing eu reprehenderit enim.
+            </p>
+          </div>
+        </div>
+      </section>
+      
     </main>
     <script type="module" src="/src/main.js"></script>
   </body>
