--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>rent-house</title>
   </head>
   <body class="h-screen">
-    <main class="h-full">
+    <main class="h-fit">
       <section class="flex flex-col bg-black relative">
         <header class="flex p-2 justify-between sticky top-0 bg-black z-40">
           <div class="p-4">
@@ -139,7 +139,7 @@
           </section>
           <section>
             <img
-              class="rounded-t-full border-8 border-gray-700"
+              class="rounded-t-full border-8 border-gray-700 "
               src="src/imag/hero-image.png"
             />
           </section>
@@ -162,9 +162,9 @@
           </div>
           <div class="flex gap-3">
             <button
-              class="text-2xl shadow-md bg-white h-8 w-8 rounded-[4px] hover:bg-gray-100 hover:scale-110"
+              class="text-2xl shadow-md bg-white h-8 w-8 rounded-[4px] hover:bg-gray-100 hover:scale-110 rotate-180"
             >
-              <
+              >
             </button>
             <button
               class="text-2xl shadow-md bg-white h-8 w-8 rounded-[4px] hover:bg-gray-100 hover:scale-110"
@@ -189,7 +189,7 @@
           </div>
         </div>
       </section>
-      <section class="flex m-12 gap-40">
+      <section class="flex p-12 gap-40">
         <div>
           <img
             class="rounded-t-full border-8 border-gray-300"
@@ -338,8 +338,191 @@
           </div>
         </div>
       </section>
-      
+      <section class="flex p-12 gap-35">
+        <div class="flex flex-col gap-8">
+          <div class="flex flex-col gap-4">
+            <p class="text-one text-2xl font-semibold">Our Contact Us</p>
+            <p class="text-two text-4xl font-semibold">Easy to contact us</p>
+            <p class="text-gray-500 text-[16px]">
+              We always ready to help by providijng the best services for you
+              .<br />
+              We beleive a good blace to live can make your life better
+            </p>
+          </div>
+          <div class="grid grid-cols-2 gap-4">
+            <div
+              class="flex flex-col border-1 border-gray-200 rounded-[5px] p-4 gap-4 hover:scale-105 hover:border-[#4066ff]"
+            >
+              <div class="flex gap-5">
+                <svg
+                  width="24"
+                  height="24"
+                  viewBox="0 0 24 24"
+                  fill="none"
+                  xmlns="http://www.w3.org/2000/svg"
+                >
+                  <path
+                    d="M21 19V17.3541C21 16.5363 20.5021 15.8008 19.7428 15.4971L17.7086 14.6835C16.7429 14.2971 15.6422 14.7156 15.177 15.646L15 16C15 16 12.5 15.5 10.5 13.5C8.5 11.5 8 9 8 9L8.35402 8.82299C9.28438 8.35781 9.70285 7.25714 9.31654 6.29136L8.50289 4.25722C8.19916 3.4979 7.46374 3 6.64593 3H5C3.89543 3 3 3.89543 3 5C3 13.8366 10.1634 21 19 21C20.1046 21 21 20.1046 21 19Z"
+                    fill="#4066ff"
+                  ></path>
+                </svg>
+                <span class="text-two text-4 font-semibold">Call</span>
+              </div>
+              <div class="flex">
+                <p class="text-gray-500 text-4 pl-10">021 123 145 14</p>
+              </div>
+              <div class="flex justify-center">
+                <button
+                  class="px-25 py-2 bg-[#eeeeff] text-[#4066ff] font-semibold rounded-[4px] hover:bg-[#4066ff] hover:text-[#eeeeff] hover:scale-105"
+                >
+                  Call now
+                </button>
+              </div>
+            </div>
+            <div
+              class="flex flex-col border-1 border-gray-200 rounded-[5px] p-4 gap-4 hover:scale-105 hover:border-[#4066ff]"
+            >
+              <div class="flex gap-5">
+                <svg
+                  width="24"
+                  height="24"
+                  viewBox="0 0 24 24"
+                  fill="none"
+                  xmlns="http://www.w3.org/2000/svg"
+                >
+                  <path
+                    fill-rule="evenodd"
+                    clip-rule="evenodd"
+                    d="M11 3H13C17.9706 3 22 7.02944 22 12C22 16.9706 17.9706 21 13 21H6C3.79086 21 2 19.2091 2 17V12C2 7.02944 6.02944 3 11 3ZM12 13C12.5523 13 13 12.5523 13 12C13 11.4477 12.5523 11 12 11C11.4477 11 11 11.4477 11 12C11 12.5523 11.4477 13 12 13ZM17 12C17 12.5523 16.5523 13 16 13C15.4477 13 15 12.5523 15 12C15 11.4477 15.4477 11 16 11C16.5523 11 17 11.4477 17 12ZM8 13C8.55228 13 9 12.5523 9 12C9 11.4477 8.55228 11 8 11C7.44772 11 7 11.4477 7 12C7 12.5523 7.44772 13 8 13Z"
+                    fill="#4066ff"
+                  ></path>
+                </svg>
+                <span class="text-two text-4 font-semibold">Chat</span>
+              </div>
+              <div class="flex">
+                <p class="text-gray-500 text-4 pl-10">021 123 145 14</p>
+              </div>
+              <div class="flex justify-center">
+                <button
+                  class="px-24 py-2 bg-[#eeeeff] text-[#4066ff] font-semibold rounded-[4px] hover:bg-[#4066ff] hover:text-[#eeeeff] hover:scale-105"
+                >
+                  Chat now
+                </button>
+              </div>
+            </div>
+            <div
+              class="flex flex-col border-1 border-gray-200 rounded-[5px] p-4 gap-4 hover:scale-105 hover:border-[#4066ff]"
+            >
+              <div class="flex gap-5">
+                <svg
+                  width="24"
+                  height="24"
+                  viewBox="0 0 24 24"
+                  fill="none"
+                  xmlns="http://www.w3.org/2000/svg"
+                >
+                  <path
+                    fill-rule="evenodd"
+                    clip-rule="evenodd"
+                    d="M11 3H13C17.9706 3 22 7.02944 22 12C22 16.9706 17.9706 21 13 21H6C3.79086 21 2 19.2091 2 17V12C2 7.02944 6.02944 3 11 3ZM12 13C12.5523 13 13 12.5523 13 12C13 11.4477 12.5523 11 12 11C11.4477 11 11 11.4477 11 12C11 12.5523 11.4477 13 12 13ZM17 12C17 12.5523 16.5523 13 16 13C15.4477 13 15 12.5523 15 12C15 11.4477 15.4477 11 16 11C16.5523 11 17 11.4477 17 12ZM8 13C8.55228 13 9 12.5523 9 12C9 11.4477 8.55228 11 8 11C7.44772 11 7 11.4477 7 12C7 12.5523 7.44772 13 8 13Z"
+                    fill="#4066ff"
+                  ></path>
+                </svg>
+                <span class="text-two text-4 font-semibold">Video Call</span>
+              </div>
+              <div class="flex">
+                <p class="text-gray-500 text-4 pl-10">021 123 145 14</p>
+              </div>
+              <div class="flex justify-center">
+                <button
+                  class="px-19 py-2 bg-[#eeeeff] text-[#4066ff] font-semibold rounded-[4px] hover:bg-[#4066ff] hover:text-[#eeeeff] hover:scale-105"
+                >
+                  Video Call now
+                </button>
+              </div>
+            </div>
+            <div
+              class="flex flex-col border-1 border-gray-200 rounded-[5px] p-4 gap-4 hover:scale-105 hover:border-[#4066ff]"
+            >
+              <div class="flex gap-5">
+                <svg
+                  width="24"
+                  height="24"
+                  viewBox="0 0 24 24"
+                  fill="none"
+                  xmlns="http://www.w3.org/2000/svg"
+                >
+                  <path
+                    fill-rule="evenodd"
+                    clip-rule="evenodd"
+                    d="M6 3C3.79086 3 2 4.79086 2 7V17C2 19.2091 3.79086 21 6 21H18C20.2091 21 22 19.2091 22 17V7C22 4.79086 20.2091 3 18 3H6ZM6.41603 7.37592C6.07138 7.14616 5.60573 7.23929 5.37597 7.58393C5.1462 7.92858 5.23933 8.39423 5.58398 8.624L9.36518 11.1448C10.9607 12.2085 13.0393 12.2085 14.6348 11.1448L18.416 8.624C18.7607 8.39423 18.8538 7.92858 18.624 7.58393C18.3943 7.23929 17.9286 7.14616 17.584 7.37592L13.8028 9.89672C12.7111 10.6245 11.2889 10.6245 10.1972 9.89672L6.41603 7.37592Z"
+                    fill="#4066ff"
+                  ></path>
+                </svg>
+                <span class="text-two text-4 font-semibold">Message</span>
+              </div>
+              <div class="flex">
+                <p class="text-gray-500 text-4 pl-10">021 123 145 14</p>
+              </div>
+              <div class="flex justify-center">
+                <button
+                  class="px-20 py-2 bg-[#eeeeff] text-[#4066ff] font-semibold rounded-[4px] hover:bg-[#4066ff] hover:text-[#eeeeff] hover:scale-105"
+                >
+                  Message now
+                </button>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div>
+          <img
+            class="rounded-t-full size-160 h-126 "
+            src="src/imag/contact.jpg"
+            alt=""
+          />
+        </div>
+      </section>
+      <section class="flex p-12">
+        <div
+          class="bg-[#1d4ed8] border-4 border-[#3b82f6] w-full py-16 flex flex-col justify-center items-center gap-4 rounded-md"
+        >
+          <p class="text-white text-[32px] font-semibold">
+            Get started with Homyz
+          </p>
+          <p class="text-[#8c8b8b] text-[14px]">
+            Subscribe and find super attractive price quotes from us. Find your
+            residence soon
+          </p>
+          <button
+            class="bg-[#3b82f6] p-2 rounded-md text-white text-[16px] border-2 border-white hover:scale-105"
+          >
+            Get Started
+          </button>
+        </div>
+      </section>
     </main>
+    <footer class="flex p-12 justify-between items-center">
+      <div class="flex flex-col gap-5">
+        <img class="w-40" src="src/imag/logo2.png" alt="" />
+        <p class="text-[14px] text-[#8c8b8b]">
+          Our vision is to make all people<br />
+          the best place to live for them.
+        </p>
+      </div>
+      <div class="flex flex-col gap-5">
+        <div class="flex flex-col">
+          <p class="text-two text-[34px] font-bold">Information</p>
+          <p class="text-[16px] text-[#8c8b8b]">145 New York, FL 5467, USA</p>
+        </div>
+        <ul class="flex gap-4">
+          <li class="text-two text-[16px] font-semibold">Property</li>
+          <li class="text-two text-[16px] font-semibold">Services</li>
+          <li class="text-two text-[16px] font-semibold">Product</li>
+          <li class="text-two text-[16px] font-semibold">About Us</li>
+      
+        </ul>
+      </div>
+    </footer>
     <script type="module" src="/src/main.js"></script>
   </body>
 </html>
