--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <li class="menuItem">Get Started</li>
             <li>
               <button
-                class="px-3 py-2 bg-[#2949C6] text-white rounded-[5px] text-[14px] hover:scale-105"
+                class="px-3 py-2 duration-300 bg-[#2949C6] text-white rounded-[5px] text-[14px] hover:scale-105"
               >
                 Contact
               </button>
@@ -29,11 +29,11 @@
         </header>
         <div class="flex px-20 py-8 gap-40">
           <section class="flex flex-col gap-12">
-            <div class="relative">
+            <div class="relative ">
               <div
                 class="absolute left-55 w-10 h-10 bg-amber-500 rounded-[50%]"
               ></div>
-              <h1 class="relative text-white text-[52px] font-bold">
+              <h1 class="relative text-white text-[52px] font-bold ">
                 Discover <br />Most Suitable <br />Property
               </h1>
             </div>
@@ -66,7 +66,7 @@
               </svg>
               <input class="outline-none w-full" type="text" />
               <button
-                class="px-3 py-2 bg-[#2949C6] text-white rounded-[5px] text-[14px] hover:scale-105"
+                class="px-3 py-2 duration-300 bg-[#2949C6] text-white rounded-[5px] text-[14px] hover:scale-105"
               >
                 Search
               </button>
@@ -173,9 +173,9 @@
             </button>
           </div>
         </div>
-        <div class="flex gap-3">
-          <div
-            class="flex flex-col w-[300px] gap-4 p-5 hover:scale-105 hover:bg-gray-100"
+        <div id="getSlides" class="flex gap-3 ">
+          <!-- <div
+            class="flex flex-col duration-300 w-[300px] gap-4 p-5 hover:scale-105 hover:bg-gray-100"
           >
             <img src="src/imag/state1.png" />
             <span class="text-one text-xl font-bold"
@@ -186,7 +186,7 @@
               >Jacarta garden city state,paulo gadung ,jakarta timur ,Diki
               jakarta</span
             >
-          </div>
+          </div> -->
         </div>
       </section>
       <section class="flex p-12 gap-40">
@@ -207,7 +207,7 @@
             </p>
           </div>
           <div
-            class="showhide flex flex-col p-4 border-1 border-gray-200 gap-5"
+            class="showhide flex flex-col p-4 border-1 border-gray-200 gap-5 "
           >
             <div class="flex justify-between p-2">
               <svg
@@ -351,7 +351,7 @@
           </div>
           <div class="grid grid-cols-2 gap-4">
             <div
-              class="flex flex-col border-1 border-gray-200 rounded-[5px] p-4 gap-4 hover:scale-105 hover:border-[#4066ff]"
+              class="flex flex-col border-1 border-gray-200 rounded-[5px] p-4 gap-4 hover:scale-105 duration-300 hover:border-[#4066ff]"
             >
               <div class="flex gap-5">
                 <svg
@@ -373,14 +373,14 @@
               </div>
               <div class="flex justify-center">
                 <button
-                  class="px-25 py-2 bg-[#eeeeff] text-[#4066ff] font-semibold rounded-[4px] hover:bg-[#4066ff] hover:text-[#eeeeff] hover:scale-105"
+                  class="px-25 py-2 bg-[#eeeeff] text-[#4066ff] font-semibold rounded-[4px] duration-300 hover:bg-[#4066ff] hover:text-[#eeeeff] hover:scale-105"
                 >
                   Call now
                 </button>
               </div>
             </div>
             <div
-              class="flex flex-col border-1 border-gray-200 rounded-[5px] p-4 gap-4 hover:scale-105 hover:border-[#4066ff]"
+              class="flex flex-col border-1 border-gray-200 rounded-[5px] p-4 gap-4 hover:scale-105 duration-300 hover:border-[#4066ff]"
             >
               <div class="flex gap-5">
                 <svg
@@ -404,14 +404,14 @@
               </div>
               <div class="flex justify-center">
                 <button
-                  class="px-24 py-2 bg-[#eeeeff] text-[#4066ff] font-semibold rounded-[4px] hover:bg-[#4066ff] hover:text-[#eeeeff] hover:scale-105"
+                  class="px-24 py-2 bg-[#eeeeff] text-[#4066ff] font-semibold rounded-[4px] duration-300 hover:bg-[#4066ff] hover:text-[#eeeeff] hover:scale-105"
                 >
                   Chat now
                 </button>
               </div>
             </div>
             <div
-              class="flex flex-col border-1 border-gray-200 rounded-[5px] p-4 gap-4 hover:scale-105 hover:border-[#4066ff]"
+              class="flex flex-col border-1 border-gray-200 rounded-[5px] p-4 gap-4 hover:scale-105 duration-300 hover:border-[#4066ff]"
             >
               <div class="flex gap-5">
                 <svg
@@ -435,14 +435,14 @@
               </div>
               <div class="flex justify-center">
                 <button
-                  class="px-19 py-2 bg-[#eeeeff] text-[#4066ff] font-semibold rounded-[4px] hover:bg-[#4066ff] hover:text-[#eeeeff] hover:scale-105"
+                  class="px-19 py-2 bg-[#eeeeff] text-[#4066ff] font-semibold rounded-[4px] duration-300 hover:bg-[#4066ff] hover:text-[#eeeeff] hover:scale-105"
                 >
                   Video Call now
                 </button>
               </div>
             </div>
             <div
-              class="flex flex-col border-1 border-gray-200 rounded-[5px] p-4 gap-4 hover:scale-105 hover:border-[#4066ff]"
+              class="flex flex-col border-1 border-gray-200 rounded-[5px] p-4 gap-4 hover:scale-105 duration-300 hover:border-[#4066ff]"
             >
               <div class="flex gap-5">
                 <svg
@@ -466,7 +466,7 @@
               </div>
               <div class="flex justify-center">
                 <button
-                  class="px-20 py-2 bg-[#eeeeff] text-[#4066ff] font-semibold rounded-[4px] hover:bg-[#4066ff] hover:text-[#eeeeff] hover:scale-105"
+                  class="px-20 py-2 bg-[#eeeeff] text-[#4066ff] font-semibold rounded-[4px] duration-300 hover:bg-[#4066ff] hover:text-[#eeeeff] hover:scale-105"
                 >
                   Message now
                 </button>
@@ -494,7 +494,7 @@
             residence soon
           </p>
           <button
-            class="bg-[#3b82f6] p-2 rounded-md text-white text-[16px] border-2 border-white hover:scale-105"
+            class="bg-[#3b82f6] p-2 rounded-md duration-300 text-white text-[16px] border-2 border-white hover:scale-105"
           >
             Get Started
           </button>
