--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
             <img class="w-[80px]" src="src/imag/logo.png" />
           </div>
           <ul class="flex gap-5 items-center pt-10 pr-10 pb-1">
-            <li class="menuItem">Residencies</li>
-            <li class="menuItem">Our Value</li>
-            <li class="menuItem">Contact Us</li>
-            <li class="menuItem">Get Started</li>
+            <li class="menuItem"><a href="#mark1">Residencies</a></li>
+            <li class="menuItem"><a href="#mark2">Our Value</a></li>
+            <li class="menuItem"><a href="#mark3">Contact Us</a></li>
+            <li class="menuItem"><a href="#mark4">Get Started</a></li>
             <li>
               <button
                 class="px-3 py-2 duration-300 bg-[#2949C6] text-white rounded-[5px] text-[14px] hover:scale-105"
@@ -156,7 +156,7 @@
         <img class="h-25 w-1/5" src="src/imag/tower.png" />
         <img class="h-25 w-1/5" src="src/imag/equinix.png" />
       </section>
-      <section class="flex flex-col m-16 gap-8">
+      <section id="mark1" class="flex flex-col m-16 gap-8">
         <div class="flex justify-between items-center">
           <div class="flex flex-col">
             <p class="text-one text-2xl font-bold">Best Choices</p>
@@ -196,7 +196,7 @@
           </div> -->
         </div>
       </section>
-      <section class="flex p-12 gap-40">
+      <section id="mark2" class="flex p-12 gap-40">
         <div>
           <img
             class="rounded-t-full border-8 border-gray-300"
@@ -345,7 +345,7 @@
           </div>
         </div>
       </section>
-      <section class="flex p-12 gap-35">
+      <section id="mark3" class="flex p-12 gap-35">
         <div class="flex flex-col gap-8">
           <div class="flex flex-col gap-4">
             <p class="text-one text-2xl font-semibold">Our Contact Us</p>
@@ -489,7 +489,7 @@
           />
         </div>
       </section>
-      <section class="flex p-12">
+      <section id="mark4" class="flex p-12">
         <div
           class="bg-[#1d4ed8] border-4 border-[#3b82f6] w-full py-16 flex flex-col justify-center items-center gap-4 rounded-md"
         >
