--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       <section class="flex flex-col bg-[#131110] relative">
         <header class="flex p-2 justify-between sticky top-0 bg-[#131110] z-40">
           <div class="p-4">
-            <img class="w-[80px]" src="src/imag/logo.png" />
+            <img class="w-[80px]" src="/imag/logo.png" />
           </div>
           <ul class="flex gap-5 items-center pt-10 pr-10 pb-1">
             <li class="menuItem"><a href="#mark1">Residencies</a></li>
@@ -142,7 +142,7 @@
           <section>
             <img
               class="rounded-t-full border-8 border-[#44403c]  -translate-x-[10%] transition-all duration-1000"
-              src="src/imag/hero-image.png"
+              src="/imag/hero-image.png"
             />
           </section>
         </div>
@@ -151,10 +151,10 @@
         ></div>
       </section>
       <section class="flex gap-10 p-20 justify-between items-center">
-        <img class="h-26 w-1/6" src="src/imag/prologis.png" />
-        <img class="h-25 w-1/5" src="src/imag/realty.png" />
-        <img class="h-25 w-1/5" src="src/imag/tower.png" />
-        <img class="h-25 w-1/5" src="src/imag/equinix.png" />
+        <img class="h-26 w-1/6" src="/imag/prologis.png" />
+        <img class="h-25 w-1/5" src="/imag/realty.png" />
+        <img class="h-25 w-1/5" src="/imag/tower.png" />
+        <img class="h-25 w-1/5" src="/imag/equinix.png" />
       </section>
       <section id="mark1" class="flex flex-col m-16 gap-8">
         <div class="flex justify-between items-center">
@@ -184,7 +184,7 @@
           <!-- <div
             class="flex flex-col duration-300 min-w-[300px] gap-4 p-5 hover:scale-105 hover:bg-gray-100"
           >
-            <img  src="src/imag/state1.png" />
+            <img  src="/imag/state1.png" />
             <span class="text-one text-xl font-bold"
               >$ <span class="text-gray-500">47,04</span></span
             >
@@ -200,7 +200,7 @@
         <div>
           <img
             class="rounded-t-full border-8 border-gray-300"
-            src="src/imag/value.png"
+            src="/imag/value.png"
           />
         </div>
         <div class="flex flex-col gap-8 w-[1500px]">
@@ -484,7 +484,7 @@
         <div>
           <img
             class="rounded-t-full size-160 h-126"
-            src="src/imag/contact.jpg"
+            src="/imag/contact.jpg"
             alt=""
           />
         </div>
@@ -510,7 +510,7 @@
     </main>
     <footer class="flex p-12 justify-between items-center">
       <div class="flex flex-col gap-5">
-        <img class="w-40" src="src/imag/logo2.png" alt="" />
+        <img class="w-40" src="/imag/logo2.png" alt="" />
         <p class="text-[14px] text-[#8c8b8b]">
           Our vision is to make all people<br />
           the best place to live for them.
